# py-get-yt-sound

./: .gitignore  README.md  pyproject.toml  yt-sound.json
src/yt_sound/: __init__.py  audio_splitter.py  cli.py  report.py  settings.py
tests/: test_audio_splitter.py  test_cli.py  test_settings.py
