[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "py-get-yt-sound"
version = "0.1.0"
description = "Small CLI for downloading audio with yt-dlp"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
]

[project.scripts]
yt-sound = "yt_sound.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

